fixes alignment within table rows

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,6 +24,13 @@ body {
     font-size: small;
 }
 
+#index {
+    vertical-align: middle;
+}
+
+#image {
+    padding-top: 15px;
+}
 #name {
     font-size: large;
 }
@@ -65,6 +72,7 @@ body {
     border-radius:3px;
     margin-top: 30px;
     font-weight: 500;
+    vertical-align: middle;
 }
 
 table tr:hover {
